Added information about JScript

--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.10 2002/03/04 09:36:28 robbod Exp $ -->
+<!-- $Id: util.htm,v 1.11 2002/03/11 10:14:57 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.10 $</small>
+          <small>$Revision: 1.11 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -50,11 +50,14 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     <li><a href="#splitresource">Split integrated resource EXPRESS to
 	schemas</a></li>
     <li><a href="#exexpress">Extracting EXPRESS from repository</a></li>
+    <li><a href="#cscript">JScript, Cscript and Windows</a></li>
   </ul>
   
   <h3><a name="create">Creating a module</a></h3>
   The Windows Script File <code>utils/mkmodule.wsf</code> should be used
-  when creating a new module. It will generate:
+  when creating a new module.
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+  It will generate:
     <ul>
     <li>the module directory,</li>
     <li>skeleton <a href="mod_files.htm">XML files</a> for the module,</li>
@@ -87,6 +90,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <h3><a name="xmlhtml">Generating HTML</a></h3>
   The Jscript <code>utils/xml2html.js</code> can be used to convert the XML
   in the module repository to HTML.
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
   <p>
   The script uses the SAXON XSLT processor (see
   <a
@@ -107,7 +111,10 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   </code>
   </blockquote>
   where <code>&lt;module&gt;</code> is the name of the module.
-
+  <p>
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+  </p>
+  
   <h4>Convert the XML for all modules to HTML</h4>
   To convert the XML for all the modules to HTML run:
   <blockquote>
@@ -121,6 +128,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <code>
   <a href="../repository_index.xml">stepmod/repository_index.xml</a>
   </code>
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
 
   <h4>Convert the resource XML to HTML</h4>
   To convert the integrated resource XML to HTML run:
@@ -130,6 +138,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   </code>
   </blockquote>
   where <code>&lt;resource&gt;</code> is the name of the resource.
+<p>
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+</p>
 
   <h4>Convert the XML for all resources to HTML</h4>
   To convert the XML for all the integrated resources to HTML run:
@@ -144,7 +155,9 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <code>
   <a href="../repository_index.xml">stepmod/repository_index.xml</a>
   </code>
-  
+<p>
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+</p>
 
   <h4>Convert the XML for complete repository to HTML</h4>
   To convert the XML for the complete module repository, that is all
@@ -159,12 +172,16 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <code>
   <a href="../repository_index.xml">stepmod/repository_index.xml</a>
   </code>
+<p>
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+</p>
 
 
 
   <h3><a name="imagemap2xml">HTML image map to XML file</a></h3>
   The script <code>utils/imagemap2xml.js</code> will convert an HTML file
   containing a single image map into an XML file.
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
 
   <pre>
     cscript imagemap2xml.js &lt;module&gt; &lt;imagemap.html&gt; &lt;file.xml&gt; &lt;optional title&gt;
@@ -268,6 +285,10 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   The script <code>utils/express2xml.js</code> will convert EXPRESS into
   XML.
   <p>
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+</p>
+
+  <p>
   The script can be run in several modes.
   
   <h4>To convert all module schemas</h4>
@@ -295,6 +316,10 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <p>The script assumes that the EXPRESS files are stored in the module
   directory, and that the ARM EXPRESS is called <code>arm.exp</code> as
   described in <a href="mod_files.htm">"Module Files"</a>
+  <p>
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+</p>
+
 
   <h4>To convert module MIM short form</h4>
   To convert the MIM short form EXPRESS schema for a module, run:
@@ -400,6 +425,21 @@ containing multiple schemas.
     directory.
   </p>
 
-
+  <h2><a name="cscript">JScript, Cscript and Windows</a></h2>
+  The utility functions are JScripts and the assumption is made that
+  JScript is installed on the machine. The later versions of windows have
+  this installed be default. 
+  <p>
+  To test run a DOS command (Start->run>command)
+  and then <code>cscript</code>.
+  </p>
+  <p>
+  If CScript is not present on the machine, it can be down loaded from
+  Microsoft:
+      <small>
+        <a href="http://msdn.microsoft.com/downloads/default.asp?url=/downloads/topic.asp?url=/msdn-files/028/001/175/topic.xml">http://msdn.microsoft.com/downloads/default.asp?url=/downloads/topic.asp?url=/msdn-files/028/001/175/topic.xml</a>        
+      </small>
+    </p>
+  
   </BODY>
 </HTML>
