Added description of extractDescriptions.wsf

--- a/help/doc_exp.htm
+++ b/help/doc_exp.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: xml_exp.htm,v 1.6 2002/03/04 09:36:28 robbod Exp $ -->
+<!-- $Id: doc_exp.htm,v 1.1 2002/03/19 13:37:08 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.6 $</small>
+          <small>$Revision: 1.1 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -38,6 +38,14 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     </small>
   </center>
 
+  <h2>Contents</h2>
+  <ul>
+    <li><a href="#top">EXPRESS files</a></li>
+    <li><a href="#int_desc">EXPRESS Description as part of the EXPRESS XML</a></li>
+    <li><a href="#ext_desc">EXPRESS Description through an external file</a></li>
+    <li><a href="#extdescwsf">Extracting EXPRESS descriptions</a></li>
+
+  </ul>
 
 <h2>
   <a name="top">EXPRESS files</a>
@@ -73,7 +81,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   </p>
 
   <h2>
-  <a name="int_desc">EXPRESS Description as part of the EXPRESS XML<p></a>
+  <a name="int_desc">EXPRESS Description as part of the EXPRESS XML</a>
   </h2>
   The XML derived from the EXPRESS, e.g. <tt>arm.xml</tt> and 
   <tt>mim.xml</tt>, comprises a set of XML elements representing every
@@ -292,8 +300,8 @@ END_ENTITY;
 
     &lt;express 
       language_version="2" 
-      rcs.date="$Date: 2002/03/18 10:36:09 $"
-      rcs.revision="$Revision: 1.6 $" 
+      rcs.date="$Date: 2002/03/19 13:37:08 $"
+      rcs.revision="$Revision: 1.1 $" 
       <b><font color="0000FF">description.file="arm_descriptions.xml"&gt;</font></b>
     &lt;application 
       name="GraphicalEXPRESS" 
@@ -397,8 +405,8 @@ END_SCHEMA;
 &lt;ext_descriptions 
 module_directory="work_order" 
 schema_file="arm.xml"
-rcs.date="$Date: 2002/03/18 10:36:09 $"
-rcs.revision="$Revision: 1.6 $"&gt;
+rcs.date="$Date: 2002/03/19 13:37:08 $"
+rcs.revision="$Revision: 1.1 $"&gt;
 
 
   &lt;!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -549,6 +557,17 @@ of the Work_order.
 </pre>
 </p>
 
+<a name="extdescwsf">
+<h2>Extracting EXPRESS descriptions</h2>
+</a>
+<p>
+The Windows Script Host file: <code>utils/extractDescriptions.wsf</code> can be
+used to extract the EXPRESS descriptions can be extracted from the XML
+EXPRESS file to a named XML file.
+</p>
+<p>
+  Note: this assumes that <a href="util.htm#cscript">JScript is installed</a>.
+</p>
 </BODY>
 </HTML>
   
