--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.11 2002/03/11 10:14:57 robbod Exp $ -->
+<!-- $Id: util.htm,v 1.12 2002/03/13 10:05:22 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.11 $</small>
+          <small>$Revision: 1.12 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -50,6 +50,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     <li><a href="#splitresource">Split integrated resource EXPRESS to
 	schemas</a></li>
     <li><a href="#exexpress">Extracting EXPRESS from repository</a></li>
+    <li><a href="#extdescwsf">Extracting EXPRESS descriptions</a></li>
     <li><a href="#cscript">JScript, Cscript and Windows</a></li>
   </ul>
   
@@ -395,7 +396,7 @@ containing multiple schemas.
     used to extract all the EXPRESS to a named directory. 
   </p>
   <p>
-    Note: the script reads the list of modules and integarted resource
+    Note: the script reads the list of modules and integrated resource
     schemata from 
     <a href="../repository_index.xml"><code>repository_index.xml</code></a>
   </p>
@@ -424,7 +425,20 @@ containing multiple schemas.
     as the schema it contains and storing it in the relevant
     directory.
   </p>
+<a name="extdescwsf">
+<h2>Extracting EXPRESS descriptions</h2>
+</a>
+<p>
+The Windows Script Host file: <code>utils/extractDescriptions.wsf</code> can be
+used to extract the EXPRESS descriptions can be extracted from the XML
+EXPRESS file to a named XML file.
+</p>
+<p>
+  Note: this assumes that <a href="#cscript">JScript is installed</a>.
+</p>
 
+
+  
   <h2><a name="cscript">JScript, Cscript and Windows</a></h2>
   The utility functions are JScripts and the assumption is made that
   JScript is installed on the machine. The later versions of windows have
