Added more description about editing a module

--- a/help/mod_creation.htm
+++ b/help/mod_creation.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: mod_creation.htm,v 1.7 2002/03/04 08:44:05 robbod Exp $ -->
+<!-- $Id: mod_creation.htm,v 1.8 2002/03/04 09:36:28 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.7 $</small>
+          <small>$Revision: 1.8 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -40,27 +40,46 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 
 
 <h2>
-  <a name="mod_files">Module Creation</a>
+  <a name="mod_files">Creating / Editing a Module</a>
 </h2>
   
-The following stages are required in the creation of a module:
+The following stages are required in the creation or editing of a module:
 <ul>
   <li>
       Create the <a href="mod_files.htm">directory and files</a> for
       the module using the JScript
       <code><a href="util.htm#create">mkmodule</a></code>. 
+      <br/>Note: When editing the module directory should already exist.
   </li>
   <li>
       Add the new module to the index of modules:
       <a href="../repository_index.htm">repository_index.htm</a>
+      <br/>Note: When editing the module should already be in 
+      <a href="../repository_index.htm">repository_index.htm</a>
   </li>
   <li>
       Create the ARM, the MIM short and long form EXPRESS files storing
-      them in the module directory.<br/>
-      The ARM EXPRESS should be called <code>arm.exp</code>, <br/>
-      the MIM short form EXPRESS should be called <code>mim.exp</code>,<br/>
-      the MIM long form EXPRESS should be called <code>mim_lf.exp</code>
-      as described in  <a href="mod_files.htm">"Module Files"</a>
+      them in the module directory.
+    <ul>
+      <li>The ARM EXPRESS should be called <code>arm.exp</code>, </li>
+      <li>the MIM short form EXPRESS should be called <code>mim.exp</code>,</li>
+      <li>the MIM long form EXPRESS should be called <code>mim_lf.exp</code>
+      as described in  <a href="mod_files.htm">"Module Files"</a></li>
+    </ul>
+  </li>
+  <li>
+    Create the text definitions of the entities, attributes, rules,
+    functions in file <code>arm_descriptions.xml</code>
+     <code>mim_descriptions.xml.</code> See
+    <a href="doc_exp.htm">EXPRESS documentation</a>.
+  </li>
+  <li>
+    Edit <code>arm.xml</code> and <tt>mim.xml</tt> to ensure that the
+  description file is 
+  referenced.  Add the attribute:
+  <code>description.file="arm_descriptions.xml" </code>
+  in element &lt;express&gt;
+  (and <code>"mim_descriptions.xml"</code> for <code>mim.xml</code>)  
   </li>
   <li>
       Convert the EXPRESS to XML using the JScript
@@ -80,6 +99,7 @@ The following stages are required in the creation of a module:
       <code><a href="util.htm#xml2html">xml2html</a></code>.
   </li>
 </ul>
+
 
 </BODY>
 </HTML>
