--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: index.htm,v 1.12 2002/03/19 15:10:02 robbod Exp $ -->
+<!-- $Id: index.htm,v 1.13 2002/03/26 11:12:55 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.12 $</small>
+          <small>$Revision: 1.13 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -55,7 +55,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     <li><a href="mod_intro.htm">Module</a></li>
 	<ul>
 	  <li><a href="mod_intro.htm">Module introduction</a></li>
-	  <li><a href="mod_creation.htm">eating / Editing a Module</a></li>
+	  <li><a href="mod_creation.htm">Creating / Editing a Module</a></li>
 	  <li><a href="mod_doc.htm">Module documentation</a></li>
 	      <ul>
 		<li><a href="mod_doc.htm#module">Module</a></li>
