added documentation for utils/build.xml

--- a/help/index.htm
+++ b/help/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: index.htm,v 1.13 2002/03/26 11:12:55 robbod Exp $ -->
+<!-- $Id: index.htm,v 1.14 2002/03/26 11:18:16 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.13 $</small>
+          <small>$Revision: 1.14 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -109,6 +109,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 	<ul>
 	  <li><a href="util.htm#create">Creating a module</a></li>
 	  <li><a href="util.htm#xmlhtml">Generating HTML</a></li>
+	  <li><a href="util.htm#xmlhtmlant">Generating HTML using Ant</a></li>
 	  <li><a href="util.htm#imagemap2xml">HTML image map to XML file</a></li>
 	  <li><a href="util.htm#express2xml">EXPRESS to XML</a></li>
 	  <li><a href="util.htm#splitresource">Split integrated resource
