--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.12 2002/03/13 10:05:22 robbod Exp $ -->
+<!-- $Id: util.htm,v 1.13 2002/03/19 15:10:02 robbod Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.12 $</small>
+          <small>$Revision: 1.13 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -45,6 +45,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <ul>
     <li><a href="#create">Creating a module</a></li>
     <li><a href="#xmlhtml">Generating HTML</a></li>
+    <li><a href="#xmlhtmlant">Generating HTML using Ant</a></li>
     <li><a href="#imagemap2xml">HTML image map to XML file</a></li>
     <li><a href="#express2xml">EXPRESS to XML</a></li>
     <li><a href="#splitresource">Split integrated resource EXPRESS to
@@ -177,7 +178,64 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   Note: this assumes that <a href="#cscript">JScript is installed</a>.
 </p>
 
+  <h3><a name="xmlhtmlant">Generating HTML using Ant</a></h3>
 
+<p>
+
+<a href="http://jakarta.apache.org/ant">Ant</a> is a Java&trade;-based
+build tool. The Ant build file <code>utils/build.xml</code> can be
+used as an alternative to <code>utils/xml2html.js</code> for
+converting the XML in the module repository to HTML. To use this build
+file, you need to have the following software installed:
+
+</p>
+<ul><li>
+
+Ant.
+
+</li><li>
+
+A recent version of the <a href="http://java.sun.com/j2se/">Java 2
+Platform</a>.
+
+</li><li>
+
+A TrAX-compliant XSLT processor such as <a
+href="http://saxon.sourceforge.net">Saxon</a> (use the
+&ldquo;full&rdquo; version, not the &ldquo;instant&rdquo; version) or
+<a href="http://xml.apache.org/xalan-j">Xalan-Java</a>.
+
+</li></ul><p>
+
+Although Ant requires more third-party tools than
+<code>utils/xml2html.js</code>, it offers the following advantages:
+
+</p><ul><li>
+
+Ant is platform-independent, so it can be run on both Windows and
+non-Windows operating systems.
+
+</li><li>
+
+Ant can apply an XSLT stylesheet to a collection of XML files without
+having to load the stylesheet into memory multiple times. As a result,
+<code>utils/build.xml</code> batch-processes the module repository
+XML faster than <code>utils/xml2html.js</code>.
+
+</li><li>
+
+Ant will only process an XML file if it is newer than its
+corresponding HTML file, or if the HTML file does not
+exist. Therefore, you can use <code>utils/build.xml</code> to
+efficiently keep your HTML files up to date every time you modify your
+local copy of the module repository.
+
+</li></ul><p>
+
+For more information, see the Ant documentation and the comments in
+<code>utils/build.xml</code>.
+
+</p>
 
   <h3><a name="imagemap2xml">HTML image map to XML file</a></h3>
   The script <code>utils/imagemap2xml.js</code> will convert an HTML file
