--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.13 2002/03/19 15:10:02 robbod Exp $ -->
+<!-- $Id: util.htm,v 1.14 2002/04/30 20:50:01 joshualubell Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.13 $</small>
+          <small>$Revision: 1.14 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -45,7 +45,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   <ul>
     <li><a href="#create">Creating a module</a></li>
     <li><a href="#xmlhtml">Generating HTML</a></li>
-    <li><a href="#xmlhtmlant">Generating HTML using Ant</a></li>
+    <li><a href="#xmlhtmlant">Automated builds using Ant</a></li>
     <li><a href="#imagemap2xml">HTML image map to XML file</a></li>
     <li><a href="#express2xml">EXPRESS to XML</a></li>
     <li><a href="#splitresource">Split integrated resource EXPRESS to
@@ -178,15 +178,17 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   Note: this assumes that <a href="#cscript">JScript is installed</a>.
 </p>
 
-  <h3><a name="xmlhtmlant">Generating HTML using Ant</a></h3>
+  <h3><a name="xmlhtmlant">Automated builds using Ant</a></h3>
 
 <p>
 
 <a href="http://jakarta.apache.org/ant">Ant</a> is a Java&trade;-based
 build tool. The Ant build file <code>utils/build.xml</code> can be
 used as an alternative to <code>utils/xml2html.js</code> for
-converting the XML in the module repository to HTML. To use this build
-file, you need to have the following software installed:
+converting the XML in the module repository to HTML. The build file is
+also useful for automated backups and mirroring of the repository. To
+use this build file, you need to have the following software
+installed:
 
 </p>
 <ul><li>
@@ -229,6 +231,12 @@ corresponding HTML file, or if the HTML file does not
 exist. Therefore, you can use <code>utils/build.xml</code> to
 efficiently keep your HTML files up to date every time you modify your
 local copy of the module repository.
+
+</li><li>
+
+Ant has lots of built-in functionality, making it easy not only to
+automate XSLT processing, but also to automate CVS updating,
+downloads, file operations, etc.
 
 </li></ul><p>
 
