I made some additions to the additions.

--- a/project_management/additional_module_guidelines.htm
+++ b/project_management/additional_module_guidelines.htm
@@ -11,9 +11,7 @@
 <body>
 
 <h1 align="center">Additional module guidelines&nbsp;</h1>
-<p>Version $Id: $</p>
-
-<h2>&nbsp;</h2>
+<p>Version $Id: additional_module_guidelines.htm,v 1.1 2002/05/10 23:03:14 thendrix Exp $</p>
 
 <h2>Preparing descriptions and definitions.&nbsp;&nbsp;</h2>
 
@@ -41,9 +39,19 @@ Use of abbreviations "e.g." or "i.e. is not allowed by the SC4 directives. "e.g.
 => example of wrong use: module Activity&nbsp;<br>
 </p>
 
-<h2>Text definitions of Select types</h2>
+<h2> Select types - descriptions</h2>
 
-<p>(removed because now taken care of by xslt)/</p>
+<p>To get  the XSL to document your select, add this attribute describe.selects=&quot;YES&nbsp;
+to the ext_descriptions element in the arm_descriptions.xml and mim_descriptions.xml files <br>
+e.g.</p>
+
+<p>&lt;ext_descriptions<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/05/02 10:38:37 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.3 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
+&gt;</p>
 
 <h2>Mapping table - extensible selects</h2>
 <p>
@@ -129,22 +137,22 @@ name the select&nbsp;classification_item instead of classified_select.&nbsp;</fo
 </blockquote>
 <h2>Comments in Express files</h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.1 2002/05/10 23:03:14 thendrix Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
 immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.1 2002/05/10 23:03:14 thendrix Exp $<br>
 &nbsp; Nxxx<br>
 *)</font></span><p>is the miminum required. It <span class="606025315-27032002"><font face="Arial" size="2">might
 become</font></span><p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.1 2002/05/10 23:03:14 thendrix Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span><p>You can add more...
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: mim.exp,v 1.2 2002/03/22 10:21:12 robbod Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.1 2002/05/10 23:03:14 thendrix Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">SCHEMA
@@ -152,7 +160,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.1 2002/05/10 23:03:14 thendrix Exp $ field.</font></span>
 <p>&nbsp;
 <h2>Inserting Notes and examples in xml files</h2>
 <p><font face="Arial" color="#0000ff" size="2"><span class="198333009-21032002">If
@@ -291,9 +299,9 @@ front cover page of the module.</font></span>
   <li><tt>published</tt> y if the module has been published as an ISO standard
   <li><tt>language</tt> the language of the standard. Defaults to E - English
   <li><tt>rcs.date</tt> Date attribute for source control software like RCS or
-    CVS. E.g. <tt>$Date: 2002/03/04 09:36:28 $</tt>
+    CVS. E.g. <tt>$Date: 2002/05/10 23:03:14 $</tt>
   <li><tt>rcs.revision </tt>Revision attribute for source control software like
-    RCS or CVS. E.g. <tt>$Revision: 1.10 $</tt></li>
+    RCS or CVS. E.g. <tt>$Revision: 1.1 $</tt></li>
 </ul>
 </span>
 
@@ -314,7 +322,7 @@ front cover page of the module.</font></span>
 <p>Export XML and also express.</p>
 
 <blockquote>
-  <p>NOTE Somes generated from GE&nbsp; have errors.&nbsp; model.xml has no
+  <p>NOTE Some files generated from older versions of GE&nbsp; have errors.&nbsp; model.xml has no
   DOCTYPE tag. (Schema_name).xml has incorrect DOCTYPE tag, and it is in the
   wrong location (see below).</p>
 
@@ -323,7 +331,7 @@ front cover page of the module.</font></span>
   <p>&lt;?xml version=&quot;1.0&quot; encoding="UTF-8"?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;&nbsp; ...
   Second tag in file. Note leading explanation point<br>
-&lt;!-- $Id: arm.xml,v 1.1 2002/04/09 07:03:30 goset1 Exp $ --><br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.1 2002/05/10 23:03:14 thendrix Exp $ --><br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;</p>
 
 </blockquote>
@@ -352,21 +360,43 @@ was ignored by g2module</p>
 
 <blockquote>
   <p>The title attribute of the element imgfile of the file armexpg1.xml should be:</p>
+  <blockquote>
   <p>Figure C.1 - ARM schema level diagram (1 of  1)</p>
+  </blockquote>
   <p>The title attribute of the element imgfile of the file armexpg&lt;n>.xml should be:</p>
+  <blockquote>
   <p>Figure C.n - ARM entity level diagram (p of  q)&nbsp;</p>
+  </blockquote>
   <p>where p=n -1 and q= number of entity diagrams</p>
   <p>The title attribute of the element imgfile of the file mimexpg1.xml should be:</p>
+  <blockquote>
   <p>Figure D.1 - MIM schema level diagram (1 of  1)&nbsp;</p>
-  <p>The title attribute of the element imgfile of the file mimexpg&lt;n>.xml should be:<br>
+  </blockquote>
+  <p>The title attribute of the element imgfile of the file mimexpg&lt;n>.xml should be:</p>
+  <blockquote>
+  <p>
   Figure D.n - MIM entity level diagram (p of  q)&nbsp;</p>
+  </blockquote>
   <p>where p=n -1 and q= number of entity diagrams</p>
-  <p><font size="2">NOTE&nbsp; I removed the word Express-G in the titles because annexC and annexD introductions specify that the diagrams are
+  <p><font size="2">NOTE&nbsp; I removed the word Express-G in the titles because
+  annex C and annex D introductions specify that the diagrams are
   Express-G and because SC4N1217 does not require this word for ARM diagrams of
   APs.</font></p>
 </blockquote>
 <p>When copying files to your module,&nbsp; be careful about overwriting
 module.xml with the one generate by g2modules.</p>
+
+<h2>USE FROM</h2>
+
+<p>You need to include in USE from statements:</p>
+<ol>
+  <li>Any entity that appears in the AIM element column as the mapping of an application object</li>
+  <li>Any entity that appears in the AIM element column as the mapping of an attribute of an application object, when this entity is not referred, directly or indirectly, to by an attribute of the entities of the preceding
+    category</li>
+  <li>any entity or any Select type that appears in the Reference path when this Express construct is not referred, directly or indirectly,  to by an attribute of the entities in the AIM element column<br>
+    <br>
+  </li>
+</ol>
 
 </body>
 
