Chnaged text for getExpress

--- a/help/util.htm
+++ b/help/util.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html
 PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
-<!-- $Id: util.htm,v 1.14 2002/04/30 20:50:01 joshualubell Exp $ -->
+<!-- $Id: util.htm,v 1.15 2002/05/07 16:23:49 joshualubell Exp $ -->
 <HTML>
 <HEAD>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,7 +16,7 @@ PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
       <td width="120">
         <h3 align="left">
           <b>Help</b><br/>
-          <small>$Revision: 1.14 $</small>
+          <small>$Revision: 1.15 $</small>
         </h3>
       </td>
       <td width="300" align="center">
@@ -462,9 +462,8 @@ containing multiple schemas.
     used to extract all the EXPRESS to a named directory. 
   </p>
   <p>
-    Note: the script reads the list of modules and integrated resource
-    schemata from 
-    <a href="../repository_index.xml"><code>repository_index.xml</code></a>
+    Note: the script takes a list of modules as input. The list is a file
+    with a module name on each line.
   </p>
   <p>
     To run double click on it <code>utils/getExpress.wsf</code><br/>
@@ -496,14 +495,48 @@ containing multiple schemas.
 </a>
 <p>
 The Windows Script Host file: <code>utils/extractDescriptions.wsf</code> can be
-used to extract the EXPRESS descriptions can be extracted from the XML
+used to extract the EXPRESS descriptions from the XML
 EXPRESS file to a named XML file.
 </p>
 <p>
   Note: this assumes that <a href="#cscript">JScript is installed</a>.
 </p>
+<p>
+  Note: this assumes that EXPRESS XML is in a module directory.
+</p>
+<p>
+    For example, run  <code>extractDescriptions.wsf</code> on
+<blockquote>
+  <code>
+    stepmod\data\modules\work_order\arm.xml
+  </code>
+</blockquote>
+          to produce
+<blockquote>
+  <code>          
+            stepmod\data\modules\work_order\arm_descriptions.xml
+</code>
+</blockquote>
 
-
+          <p>
+            Once you have extracted the description file you will
+            need to link the EXPRESS XML file to the external descriptions
+            file.
+            For example to link <code>arm.xml</code> 
+          file to the external descriptions in
+          <code>arm_descriptions.xml</code> by adding the 
+          <code>description.file</code> attribute to <code>arm.xml</code>
+          as below: 
+          </p>
+          <blockquote>
+            <code>
+              &lt;express language_version="2"<br/> 
+            &nbsp;&nbsp;&nbsp;rcs.date="$Date: 2002/05/14 17:13:37 $" <br/>
+            &nbsp;&nbsp;&nbsp;rcs.revision="$Revision: 1.12 $"<br/>
+            &nbsp;&nbsp;&nbsp;description.file="arm_descriptions.xml"<br/>
+            &gt;
+          </code>
+        </blockquote>
   
   <h2><a name="cscript">JScript, Cscript and Windows</a></h2>
   The utility functions are JScripts and the assumption is made that
