Added Robs latest email on CVS tips.

--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.2 2002/05/15 17:57:25 thendrix Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.3 2002/05/30 17:38:23 thendrix Exp $</p>
 <b>Contents</b><br>
 
 
@@ -54,6 +54,14 @@ naming<br>
 </a>
 
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#biblio">Bibliography</a>
+
+</p><p>
+
+<img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#cvs">CVS
+Tips</a>
+
+</p><p>
+&nbsp;
 
 </p><p>
 <a target="_self" href="#filenames"><br>
@@ -170,8 +178,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/05/15 17:57:25 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.2 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/05/30 17:38:23 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.3 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -261,7 +269,7 @@ name the select&nbsp;classification_item instead of classified_select.&nbsp;</fo
 <p>&nbsp;</p>
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.2 2002/05/15 17:57:25 thendrix Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.3 2002/05/30 17:38:23 thendrix Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -269,7 +277,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.2 2002/05/15 17:57:25 thendrix Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.3 2002/05/30 17:38:23 thendrix Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -278,7 +286,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.2 2002/05/15 17:57:25 thendrix Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.3 2002/05/30 17:38:23 thendrix Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 </span>
@@ -575,8 +583,8 @@ language, year of publication</h2>
   </strong></font>&nbsp;&nbsp; language=&quot;E&quot;<br>
   &nbsp;&nbsp; <font color="#ff0000"><strong>publication.year=&quot;2002&quot;<br>
   &nbsp;&nbsp; published=&quot;y&quot;<br>
-  </strong></font>&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/05/21 12:19:12 $&quot;<br>
-  &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.19 $&quot;&gt;</font></span>
+  </strong></font>&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/05/30 17:38:23 $&quot;<br>
+  &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.3 $&quot;&gt;</font></span>
 </div>
 <div>
   &nbsp;
@@ -627,9 +635,9 @@ y if the module has been published as an ISO standard
 </span>&nbsp;</span>
 <span class="772050311-26032002">
   <li><tt>rcs.date</tt>&nbsp;&nbsp;&nbsp;&nbsp; Date attribute for source control software like RCS or
-    CVS. E.g. <tt>$Date: 2002/05/15 17:57:25 $</tt>
+    CVS. E.g. <tt>$Date: 2002/05/30 17:38:23 $</tt>
   <li><tt>rcs.revision&nbsp;&nbsp;&nbsp;&nbsp; </tt>Revision attribute for source control software like
-    RCS or CVS. E.g. <tt>$Revision: 1.2 $</tt></li>
+    RCS or CVS. E.g. <tt>$Revision: 1.3 $</tt></li>
 </ul>
 
   <div>
@@ -695,7 +703,7 @@ Use of abbreviations "e.g." or "i.e. is not allowed by the SC4 directives. "e.g.
   <p>&lt;?xml version=&quot;1.0&quot; encoding="UTF-8"?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;&nbsp; ...
   Second tag in file. Note leading explanation point<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.2 2002/05/15 17:57:25 thendrix Exp $ --><br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.3 2002/05/30 17:38:23 thendrix Exp $ --><br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;</p>
 
 </blockquote>
@@ -743,6 +751,101 @@ diagram files to&nbsp; armexpg1, etc</span>)<span class="919371121-26032002">. <
 &lt;/stdtitle><br>
 &lt;/bibitem><br>
 &lt;/bibliography></p>
+
+</span>
+<h2><a name="cvs"></a>CVS tips</h2>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">When you do a CVS
+  update you get a stream of messages telling you about the progress.</font></span>
+</div>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">It is worthwhile
+  looking at these as sometimes CVS is a bit too clever.</font></span>
+</div>
+<div>
+  &nbsp;
+</div>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">One situation is
+  when:</font></span>
+</div>
+<div>
+  &nbsp;
+</div>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">you check out a
+  file, then modify it on your local machine.</font></span>
+</div>
+<div>
+  &nbsp;
+</div>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">In the meantime,
+  someone else, checks out the same file, modifies it and checks it back in.</font></span>
+</div>
+<div>
+  &nbsp;
+</div>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">The SourceForge
+  server now contains a file that is at a later revision than the one on your
+  machine.</font></span>
+</div>
+<div>
+  &nbsp;
+</div>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">Next time you do
+  a CVS update, CVS will recognize this and try to be smart.</font></span>
+</div>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">It will try to
+  merge your file with the file on the sever. i.e. CVS will modify your local
+  copy.</font></span>
+</div>
+<div>
+  <span class="573095806-30052002"><font face="Arial" size="2">If this happens,
+  CVS will either merge the revisions to it satisfaction or will identify a
+  conflict. In these cases you will see messages like this:</font></span>
+</div>
+<div>
+  &nbsp;
+</div>
+<blockquote dir="ltr" style="MARGIN-RIGHT: 0px">
+  <div>
+    <span class="573095806-30052002"><font color="#ff8000" size="2">
+    <p>cvs server: Updating data/modules/contract<br>
+    </font><font color="#0000ff" size="2">P data/modules/contract/arm.exp<br>
+    </font><font size="2">RCS file: /cvsroot/stepmod/stepmod/data/modules/contract/arm.xml,v<br>
+    retrieving revision 1.8<br>
+    retrieving revision 1.11<br>
+    Merging differences between 1.8 and 1.11 into arm.xml<br>
+    </font><font color="#ff8000" size="2">rcsmerge: warning: conflicts during
+    merge<br>
+    cvs server: conflicts found in data/modules/contract/arm.xml<br>
+    </font><font color="#ff0000" size="2">C data/modules/contract/arm.xml</p>
+    </font></span>
+  </div>
+</blockquote>
+<p><font size="2" face="Arial"><span class="573095806-30052002">The conflict
+file will be modified like this:</span></font></p>
+<p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
+version=&quot;1.0&quot;?&gt;<br>
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
+&lt;!-- $Id: arm.xml,v 1.6 2002/03/04 07:45:58 robbod Exp $ --&gt;<br>
+=======<br>
+&lt;!-- $Id: arm.xml,v 1.11 2002/05/30 00:38:22 darla Exp $ --&gt;<br>
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
+&lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
+&lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
+&lt;express<br>
+&nbsp; language_version=&quot;2&quot;<br>
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
+&nbsp; rcs.date=&quot;$Date: 2002/03/04 07:45:58 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.6 $&quot;&gt;</span></font></p>
+<p><font size="2" face="Arial"><span class="573095806-30052002">=======<br>
+</span></font></p>
+<p>&nbsp;</p>
 
 </body>
 
